@@ -1,1 +1,1 @@
-version   : 0.6.18 [swiss-army-knife addon] [01.02.2011] 
+version   : 0.6.19 [swiss-army-knife addon] [01.03.2011] 
