@@ -265,7 +265,10 @@ Changes:
 - Create svn branch 0.6.18
 - Setup-file for 0.6.18
 
+----------------------------------------------------------------------------------------------------
+Date : 01.03.2011 | Release : 0.6.19    | Author  : H.Weber | CVS:454
+----------------------------------------------------------------------------------------------------
 
-
+- Initial-Work for release named "Avatar"
 
 
